--- a/Armageddon 2022/Base.lproj/Main.storyboard
+++ b/Armageddon 2022/Base.lproj/Main.storyboard
@@ -105,7 +105,7 @@
                     <collectionView key="view" autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ys7-Mw-gwq">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.91541108630952384" green="0.96724270152396896" blue="0.98148880523889248" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="25" minimumInteritemSpacing="10" id="QHN-GL-Yof">
                             <size key="itemSize" width="320" height="308"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -120,6 +120,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="308"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </view>
+                                <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </collectionViewCell>
                         </cells>
                         <connections>
